--- a/Framework/CSS/style.css
+++ b/Framework/CSS/style.css
@@ -1,94 +1,132 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900');
-*, ::before, ::after {
-  box-sizing: border-box;
+body{
+	background: #fff url(../images/bg1.jpg) no-repeat top right;
+	background-attachment: fixed;
+	background-size: cover;
 }
-body {
-  position: relative;
-  margin: 0;
-  overflow: hidden;
-  display: flex;
-  height: 100vh;
-  justify-content: space-between;
-  letter-spacing: 2px;
-  align-items: center;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #270439;
+.rw-wrapper{
+	width: 80%;
+	position: relative;
+	margin: 0px auto 0 auto;
+	padding: 10px;
 }
-h3 {
-  position: relative;
-  white-space: nowrap;
-  text-transform: uppercase;
-  max-width: 50vw;
-  text-align: center;
-  font-size: 2.5vw;
-  font-weight: 900;
+.rw-sentence{
+	margin: 0;
 }
-h3 span {
-  position: absolute;
-  left: 5vw;
-  color: lightgoldenrodyellow;
-  background-image: linear-gradient(90deg, #ff8a00, #c8305f);
-  -webkit-background-clip: text;
-  background-clip: text;
-  opacity: 0;
-  animation: scale 3s cubic-bezier(0.5, -0.75, 0.7, 1.25) forwards;
+.rw-sentence span{
+	text-align: center;
+	color: rgba(255,255,255,1);
+	font-family: 'Trocchi';
+	white-space: nowrap;
+	text-shadow: 2px 5px 10px rgba(0,0,0,0.1);
 }
-h3 span:nth-child(2) {
-  animation-delay: 2s;
+.rw-sentence > span{
+	position: absolute;
 }
-h3 span:nth-child(3) {
-  animation-delay: 3s;
+.rw-sentence > span:first-child{
+	top: 0px;
+	left: 140px;
+	font-size: 700%;
+	color: rgba(187,177,168,0.6);
 }
-h3 span:last-child {
-  text-shadow: 20px -25px rgba(0, 0, 0, 0.2);
-  animation: fade 2s linear 5s forwards;
+.rw-sentence > span:nth-child(2){
+	top: 160px;
+	left: 300px;
+	font-size: 315%;
+	color: rgba(191,218,206, 0.7);
 }
-.bg {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  max-width: 47vw;
-  height: 100vh;
-  opacity: 0.6;
-  fill: none;
-  stroke: url(#gradient);
-  stroke-width: 2;
-  stroke-dasharray: 3000;
-  stroke-dashoffset: 3000;
-  animation: dash 5s cubic-bezier(0.51, 0.92, 0.24, 1.15) 5s forwards;
+.rw-sentence > span:nth-child(3){
+	top: 185px;
+	left: 65px;
+	font-size: 600%;
+	color: rgba(255,255,255,0.8);
 }
-@keyframes scale {
-  0% {
-    opacity: 0.2;
-    transform: scale(10);
-    filter: blur(10px);
-  }
-  50%, 85% {
-    opacity: 0.8;
-    transform: scale(1);
-    filter: blur(0);
-  }
-  100% {
-    opacity: 0;
-    transform: rotateX(90deg);
-    filter: blur(10px);
-  }
+.rw-sentence > span:last-child{
+	top: 435px;
+	left: 550px;
+	font-size: 200%;
+	color: rgba(237,234,168, 0.9);
 }
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0.8;
-  }
+.rw-words{
+	position: absolute;
+	left: 220px;
+	top: 220px;
+	height: 80px;
+	width: 400px;
+	-webkit-perspective: 800px;
+	perspective: 800px;
 }
-@keyframes dash {
-  90% {
-    stroke-dasharray: 0;
-    stroke-dashoffset: 0;
-  }
-  100% {
-    stroke-dasharray: 3000;
-    stroke-dashoffset: 0;
-  }
+.rw-words span{
+	position: absolute;
+	font-size: 800%;
+	color: transparent;
+	text-shadow: 0px 0px 80px rgba(255,255,255,1);
+	opacity: 0;
+	-webkit-animation: rotateWord 18s linear infinite 0s;
+	-ms-animation: rotateWord 18s linear infinite 0s;
+	animation: rotateWord 18s linear infinite 0s;
+}
+.rw-words span:nth-child(2) { 
+    -webkit-animation-delay: 3s; 
+	-ms-animation-delay: 3s; 
+	animation-delay: 3s; 
+}
+.rw-words span:nth-child(3) { 
+    -webkit-animation-delay: 6s; 
+	-ms-animation-delay: 6s; 
+	animation-delay: 6s; 
+}
+.rw-words span:nth-child(4) { 
+    -webkit-animation-delay: 9s; 
+	-ms-animation-delay: 9s; 
+	animation-delay: 9s; 
+}
+.rw-words span:nth-child(5) { 
+    -webkit-animation-delay: 12s; 
+	-ms-animation-delay: 12s; 
+	animation-delay: 12s; 
+}
+.rw-words span:nth-child(6) { 
+    -webkit-animation-delay: 15s; 
+	-ms-animation-delay: 15s; 
+	animation-delay: 15s; 
+}
+@-webkit-keyframes rotateWord {
+    0% { opacity: 0; -webkit-animation-timing-function: ease-in; -webkit-transform: translateY(-200px) translateZ(300px) rotateY(-120deg); }
+    5% { opacity: 1; -webkit-animation-timing-function: ease-out; -webkit-transform: translateY(0px) translateZ(0px) rotateY(0deg); }
+	6% { text-shadow: 0px 0px 0px rgba(255,255,255,1); color: #fff; }
+    17% { opacity: 1; text-shadow: 0px 0px 0px rgba(255,255,255,1); color: #fff; }
+    20% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@-ms-keyframes rotateWord {
+    0% { opacity: 0; -ms-animation-timing-function: ease-in; -ms-transform: translateY(-200px) translateZ(300px) rotateY(-120deg); }
+    5% { opacity: 1; -ms-animation-timing-function: ease-out; -ms-transform: translateY(0px) translateZ(0px) rotateY(0deg); }
+	6% { text-shadow: 0px 0px 0px rgba(255,255,255,1); color: #fff; }
+    17% { opacity: 1; text-shadow: 0px 0px 0px rgba(255,255,255,1); color: #fff; }
+    20% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@keyframes rotateWord {
+    0% { opacity: 0; -webkit-animation-timing-function: ease-in; animation-timing-function: ease-in; -webkit-transform: translateY(-200px) translateZ(300px) rotateY(-120deg); transform: translateY(-200px) translateZ(300px) rotateY(-120deg); }
+    5% { opacity: 1; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out; -webkit-transform: translateY(0px) translateZ(0px) rotateY(0deg); transform: translateY(0px) translateZ(0px) rotateY(0deg); }
+	6% { text-shadow: 0px 0px 0px rgba(255,255,255,1); color: #fff; }
+    17% { opacity: 1; text-shadow: 0px 0px 0px rgba(255,255,255,1); color: #fff; }
+    20% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@media screen and (max-width: 1060px){
+	.rw-sentence > span:first-child { font-size: 500%; left: 0px;}
+	.rw-sentence > span:nth-child(2) { font-size: 200%; top: 125px; left: 30px; }
+	.rw-sentence > span:nth-child(3) { top: 175px; left: 30px; font-size: 235%; }
+	.rw-words { left: 95px; top: 171px; }
+	.rw-words span { font-size: 250%; }
+	.rw-sentence > span:last-child { top: 240px; left: 30px; }
+}
+@media screen and (max-width: 400px){
+	.rw-sentence > span:first-child { font-size: 200%; left: 0px;}
+	.rw-sentence > span:nth-child(2) { font-size: 100%; top: 50px; left: 10px; }
+	.rw-sentence > span:nth-child(3) { top: 76px; left: 10px; font-size: 120%; }
+	.rw-words { left: 45px; top: 76px; }
+	.rw-words span { font-size: 120%; }
+	.rw-sentence > span:last-child { top: 106px; left: 10px; font-size: 100%; }
 }
