--- a/Framework/CSS/style.css
+++ b/Framework/CSS/style.css
@@ -1,5 +1,5 @@
 body{
-	background: #fff url(../images/bg1.jpg) no-repeat top right;
+	background: #fff url(../Images/bg1.jpeg) no-repeat top right;
 	background-attachment: fixed;
 	background-size: cover;
 }
